Adjustments to spacing

--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,61 @@
   vertical-align: baseline;
   background: transparent;
 }
+
+body {
+    text-align: center;
+    margin: 0 auto;
+    width: 80vw;
+    background-color: #FFFFFF;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    font-size: 1.7em;
+    text-align: center;
+    padding: 30px 0;
+}
+
+img {
+    width: 210px;
+}
+
+.customers {
+    color: gray;
+    font-size: .75em;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+/*.profile {
+    width: 28vw;
+}*/
+
 .profile {
-    width: 300px;
-    height: 300px;
+    /*width: 250px;*/
+     width: 20%;
+    /*height: 250px;*/
     margin: 10px;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
+}
+
+.name {
+    font-size: 1.2em;
+    font-weight: 600;
+    padding: 10px 0 0 0;
+    color: black;
+    /*border-bottom: 1px solid green;*/
+    
+}
+
+.email {
+    color: lightgray;
+    padding: 10px;
+}
+
+.blur {
+   color: transparent;
+   text-shadow: 0 0 5px rgba(0,0,0,0.5);
+   padding: 10px;
 }
